--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Luna</title>
     <link rel="stylesheet" href="css/luna.css"> 
 </head>
-<body>
-    <div class="whole">
+<body class="whole">
+    <div >
         <div class="content1">
             <h1> L     U     N     A</h1>
             <p>Explore my rocky surface</p>
